# AutoClicker

./: .gitignore  CMakeLists.txt  README.md
src/: AutoClicker.rc  main.cpp  resource.h
